// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly enzyme 1`] = `
<div>
  <h1>
    Basic test
  </h1>
</div>
`;

exports[`renders correctly enzyme with mount 1`] = `
<BasicTest>
  <div>
    <h1>
      Basic test
    </h1>
  </div>
</BasicTest>
`;
